[metadata]
name = jericho_validator
version = 1.1.12
author = github.com/hostinfodev
author_email = aero@recon.us.com
description = Validate arbitrary base64-encoded image uploads as incoming data urls while preserving image integrity but removing EXIF and unwanted artifacts and mitigating RCE-exploit potential.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hostinfodev/jericho-validator
project_urls =
    Example Usage = https://github.com/hostinfodev/jericho-validator/tree/main/example
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src